# aptima_framework

./: .clang-format  .clangd  .gitignore  .gitmodules  BUILD.gn  CLA.md  README.md
core/src/axis_runtime/: BUILD.gn  BUILD_release.gn  manifest.json  output_libs.gni
core/src/axis_runtime/addon/: BUILD.gn  addon.c  addon_autoload.c  addon_host.c  addon_manager.c
core/src/axis_runtime/addon_loader/: BUILD.gn  addon_loader.c
core/src/axis_runtime/app/: BUILD.gn  app.c  base_dir.c  close.c  endpoint.c  engine_interface.c  graph.c  internal.c  metadata.c  migration.c  on_xxx.c  predefined_graph.c
core/src/axis_runtime/axis_env/: BUILD.gn  axis_env.c  axis_proxy.c  inline_assets.c
core/src/axis_runtime/axis_env_proxy/: BUILD.gn  axis_env_proxy.c
core/src/axis_runtime/binding/: BUILD.gn  common.c
core/src/axis_runtime/build_template/: preserved_metadata.c  preserved_metadata.c.jinja2
core/src/axis_runtime/common/: base_dir.c  binding.c  loc.c
core/src/axis_runtime/connection/: BUILD.gn  connection.c  migration.c
core/src/axis_runtime/engine/: BUILD.gn  engine.c  on_xxx.c
core/src/axis_runtime/exaxission/: BUILD.gn  axis_exaxission_addon_and_instance_name_pair.c  base_dir.c  exaxission.c  msg_handling.c  msg_not_connected_cnt.c
core/src/axis_runtime/exaxission_context/: BUILD.gn  exaxission_context.c
core/src/axis_runtime/exaxission_group/: BUILD.gn  base_dir.c  exaxission_group.c
core/src/axis_runtime/exaxission_store/: BUILD.gn  exaxission_store.c
core/src/axis_runtime/exaxission_thread/: BUILD.gn  exaxission_thread.c  on_xxx.c
core/src/axis_runtime/global/: BUILD.gn  global.c  on_load.c  signal.c
core/src/axis_runtime/metadata/: BUILD.gn  manifest.c  metadata.c  metadata_info.c
core/src/axis_runtime/msg/: BUILD.gn  inline_assets.c  locked_res.c  loop_fields.c  msg.c  msg_create.c
core/src/axis_runtime/msg_conversion/: BUILD.gn  msg_and_its_result_conversion.c  msg_and_result_conversion.c  msg_conversion_context.c
core/src/axis_runtime/path/: BUILD.gn  path.c  path_group.c  path_in.c  path_out.c  path_table.c
core/src/axis_runtime/protocol/: BUILD.gn  close.c  protocol.c
core/src/axis_runtime/remote/: BUILD.gn  remote.c
core/src/axis_runtime/schema_store/: BUILD.gn  cmd.c  interface.c  interface_info.c  msg.c  property.c  store.c
core/src/axis_runtime/test/: BUILD.gn  env_tester.c  env_tester_proxy.c  exaxission_tester.c  test_app.c  test_exaxission.c
core/src/axis_runtime/timer/: BUILD.gn  timer.c
core/src/axis_rust/: BUILD.gn  Cargo.toml  cbindgen.toml
core/src/axis_rust/src/: bindings.rs  build.rs  lib.rs
core/src/axis_rust/tests/: graph_check.rs  integration_test.rs  interface.rs
core/src/axis_utils/: BUILD.gn  output_libs.gni
core/src/axis_utils/backtrace/: BUILD.gn  common.c
core/src/axis_utils/container/: BUILD.gn  hash_bucket.c  hash_handle.c  hash_table.c  list.c  list_int32.c  list_node.c  list_node_int32.c  list_node_ptr.c  list_node_smart_ptr.c  list_node_str.c  list_ptr.c  list_smart_ptr.c  list_str.c  vector.c
core/src/axis_utils/io/: BUILD.gn
core/src/axis_utils/lib/: BUILD.gn
core/src/axis_utils/log/: BUILD.gn  formatter.c  global.c  level.c  log.c  output.c  pid.c  time.c  time_cache.c
core/src/axis_utils/sanitizer/: BUILD.gn  memory_check.c  thread_check.c
core/src/axis_utils/schema/: BUILD.gn  schema.c
core/src/axis_utils/value/: BUILD.gn  type.c  value.c  value_convert.c  value_get.c  value_is.c  value_json.c  value_kv.c  value_merge.c  value_object.c  value_path.c  value_set.c  value_smart_ptr.c  value_string.c
tests/: BUILD.gn
tests/axis_manager/: BUILD.gn
tests/axis_manager/dependency_resolve/: BUILD.gn  test_case.py
tests/axis_manager/error_context/invalid_package_type/: BUILD.gn  test_case.py
tests/axis_manager/error_context/no_such_package/: BUILD.gn  test_case.py
tests/axis_manager/error_context/package_version_not_found/: BUILD.gn  test_case.py
tests/axis_manager/install/: BUILD.gn
tests/axis_manager/install/mock_app/: BUILD.gn  test_case.py
tests/axis_manager/install/mock_exaxission/: BUILD.gn  test_case.py
tests/axis_manager/install_all/: BUILD.gn
tests/axis_manager/install_all/install_a_before_install_all/: BUILD.gn  test_case.py
tests/axis_manager/install_all/install_all_fail_with_local_unsupported_pkg/: BUILD.gn  (+1 more)
tests/axis_manager/publish/: BUILD.gn  test_case.py
tests/axis_runtime/: BUILD.gn
tests/axis_runtime/integration/: BUILD.gn  pytest.ini
tests/axis_runtime/smoke/: BUILD.gn  gtest_main.cc
tests/axis_runtime/unit/: BUILD.gn  axis_error_test.cc  axis_msg_test.cc  axis_schema_test.cc
tests/axis_utils/: BUILD.gn
tests/axis_utils/common/: BUILD.gn  test_utils.h
tests/axis_utils/unit/: BUILD.gn  axis_base64_test.cc  axis_list_test.cc  axis_lock_test.cc  axis_log_test.cc  axis_macro_test.cc  axis_path_test.cc  axis_random_test.cc  axis_rwlock_test.cc  axis_schema_test.cc  axis_sharedptr_test.cc  axis_shm_test.cc  axis_string_test.cc  axis_thread_test.cc  sm_test.cc
tests/common/: BUILD.gn  constant.h
tests/common/client/: BUILD.gn  curl_connect.c  curl_connect.h  http.c  http.h  msgpack_tcp.c  msgpack_tcp.h  tcp.c  tcp.h
tests/common/server/: BUILD.gn
tests/local_registry/: BUILD.gn
tests/ten_manager/: BUILD.gn
tests/ten_manager/dependency_resolve/: BUILD.gn  test_case.py
tests/ten_manager/error_context/: BUILD.gn
tests/ten_manager/install_all/: BUILD.gn
tests/ten_manager/publish/: BUILD.gn  test_case.py
tests/ten_manager/standalone/: BUILD.gn
tests/ten_runtime/: BUILD.gn
tests/ten_runtime/integration/: BUILD.gn
tests/ten_runtime/smoke/: BUILD.gn  gtest_main.cc
tests/ten_runtime/unit/: BUILD.gn  ten_error_test.cc  ten_msg_test.cc  ten_schema_test.cc
tests/ten_utils/: BUILD.gn
tests/ten_utils/common/: BUILD.gn  test_utils.cpp
tests/ten_utils/unit/: BUILD.gn  sm_test.cc  ten_base64_test.cc  ten_list_test.cc  ten_lock_test.cc  ten_log_test.cc  ten_macro_test.cc  ten_path_test.cc  ten_random_test.cc  ten_rwlock_test.cc  ten_schema_test.cc  ten_sharedptr_test.cc  ten_shm_test.cc  ten_string_test.cc  ten_thread_test.cc
(+3734 files in other folders)
