#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/options.gni")
import("//build/aptima_runtime/options.gni")
import("//build/aptima_runtime/aptima.gni")
import("//build/aptima_utils/options.gni")

# When you want to get the output of the console in real time, you can use this
# pool.
pool("serialized_action_pool") {
  depth = 1
}

# Since `cargo build` can consume a significant amount of disk space, it is
# necessary to limit the concurrency of `cargo build` in certain build
# environments (e.g., CI) to manage disk space requirements.
pool("rust_action_pool") {
  depth = 1
}

group("aptima_framework_all") {
  deps = [
    "//core/src/aptima_runtime",
    "//core/src/aptima_runtime/binding",
    "//core/src/aptima_rust",
    "//packages/core_apps",
    "//packages/core_extensions",
    "//packages/core_addon_loaders",
    "//packages/core_protocols",
    "//packages/example_apps",
    "//packages/example_extensions",
    "//third_party",
  ]

  if (aptima_enable_aptima_manager) {
    deps += [ "//core/src/aptima_manager" ]
  }

  if (aptima_enable_tests) {
    deps += [ "//tests" ]
  }
}
