#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/axis_manager/options.gni")
import("//build/axis_runtime/options.gni")
import("//build/axis_utils/options.gni")
import("//third_party/jansson/output_libs.gni")

# Because there is no 'rpath' mechanism in Windows, we need to copy all the
# dependend libraries of 'unit' and 'smoke' to one folder, and setup 'PATH'
# before executing 'unit' and 'smoke' testing.
copy("copy_jansson_library_for_test") {
  sources = jansson_output_libs
  deps = [ "//third_party/jansson" ]
  outputs = [ "${root_out_dir}/tests/standalone/{{source_file_part}}" ]
}

group("tests") {
  deps = [
    "axis_runtime",
    "axis_utils",
    "//tests/axis_runtime",
  ]

  if (axis_enable_axis_manager) {
    deps += [ "local_registry:copy_local_registry" ]

    if (axis_manager_enable_tests) {
      deps += [
        "axis_manager",
        "//core/src/axis_manager:tman_test",
      ]
    }
  }
}
