#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_utils/options.gni")
import("//build/aptima_utils/utils.gni")

aptima_utils_test("aptima_utils_unit_test") {
  output_dir = "${root_out_dir}/tests/standalone"

  deps = []
  if (enable_sanitizer) {
    if (!is_clang) {
      deps += [ "//build/aptima_common/asan:package_asan_lib_for_aptima_framework_standalone_test" ]
    }
  }

  public_deps = [
    "unit",
    "//core/src/aptima_utils/backtrace",
    "//core/src/aptima_utils/container",
    "//core/src/aptima_utils/io",
    "//core/src/aptima_utils/io/general/loops",
    "//core/src/aptima_utils/lib",
    "//core/src/aptima_utils/log",
    "//core/src/aptima_utils/sanitizer",
    "//core/src/aptima_utils/schema",
    "//core/src/aptima_utils/value",
    "//tests:copy_jansson_library_for_test",
  ]

  # !Important notice!
  #
  # Do not set the value of `configs` here, because setting `configs` within a
  # template will prevent the `executable` target from using the default
  # `common_configs`.

  public_deps += [ "//third_party/googletest:gtest_main" ]
}

aptima_utils_group("aptima_utils") {
  if (aptima_utils_enable_tests) {
    public_deps = [ ":aptima_utils_unit_test" ]
  }
}
