#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
axis_utils_output_libs = []

if (is_win) {
  axis_utils_output_libs += [
    "${root_out_dir}/axis_utils.dll",
    "${root_out_dir}/axis_utils.dll.lib",
  ]
} else if (is_mac) {
  axis_utils_output_libs += [ "${root_out_dir}/libaxis_utils.dylib" ]
} else if (is_linux) {
  axis_utils_output_libs += [ "${root_out_dir}/libaxis_utils.so" ]
}
