#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/axis_runtime/options.gni")

group("integration") {
  deps = []

  deps += [ "cpp" ]

  if (axis_enable_go_binding) {
    deps += [ "go" ]
  }

  if (axis_enable_python_binding) {
    deps += [ "python" ]
  }

  if (axis_enable_nodejs_binding) {
    deps += [ "nodejs" ]
  }
}
