#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_runtime/glob.gni")
import("//build/aptima_runtime/aptima.gni")

glob("aptima_unit_tests") {
  file_list = [
    "aptima_error_test.cc",
    "aptima_msg_test.cc",
    "aptima_schema_test.cc",
  ]

  public_deps = [
    "//core/src/aptima_utils",
    "//third_party/googlemock",
    "//third_party/googletest",
  ]
  include_dirs = [ "//core/include" ]
}

aptima_executable("aptima_runtime_unit_test") {
  output_dir = "${root_out_dir}/tests/standalone"

  deps = [
    ":aptima_unit_tests",
    "//core/src/aptima_runtime",
    "//core/src/aptima_utils",
    "//tests/aptima_runtime:copy_libraries_for_test",
  ]

  if (enable_sanitizer) {
    if (!is_clang) {
      deps += [ "//build/aptima_common/asan:package_asan_lib_for_aptima_framework_standalone_test" ]
    }
  }

  public_deps = [
    "//third_party/googlemock",
    "//third_party/googletest",
    "//third_party/googletest:gtest_main",
  ]
}

group("unit") {
  deps = [ ":aptima_runtime_unit_test" ]
}
