#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_utils/options.gni")
import("//build/aptima_utils/utils.gni")

aptima_utils_glob("common") {
  no_current = true

  file_list = [ "test_utils.cpp" ]
}
