#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_utils/options.gni")
import("//build/aptima_utils/utils.gni")

aptima_utils_glob("unit") {
  no_current = true

  file_list = [
    "aptima_base64_test.cc",
    "aptima_list_test.cc",
    "aptima_lock_test.cc",
    "aptima_log_test.cc",
    "aptima_macro_test.cc",
    "aptima_manifest_test.cc",
    "aptima_path_test.cc",
    "aptima_random_test.cc",
    "aptima_rbtree_test.cc",
    "aptima_rwlock_test.cc",
    "aptima_schema_test.cc",
    "aptima_semver_test.cpp",
    "aptima_sharedptr_test.cc",
    "aptima_shm_test.cc",
    "aptima_skiplist_test.cc",
    "aptima_string_test.cc",
    "aptima_thread_test.cc",
    "sm_test.cc",
  ]

  public_deps = [
    "//core/src/aptima_utils/io/general/loops",
    "//third_party/googletest",
    "//third_party/nlohmann_json",
  ]

  deps = [ "//tests/aptima_utils/common" ]

  include_dirs = [
    "//tests",
    "//tests/aptima_utils",
  ]

  if (is_clang) {
    cflags_cc = [ "-Wno-c++11-narrowing" ]
  }
}
