#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/axis_runtime/glob.gni")
import("//build/axis_runtime/options.gni")

glob("app") {
  file_list = all_native_files
  deps = [
    "msg_interface",
    "axis_env",
  ]

  if (axis_enable_axis_rust && axis_enable_axis_rust_apis) {
    public_deps = [ "//core/src/axis_rust:axis_rust_binding" ]
  }
}
