#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/axis_runtime/glob.gni")

glob("binding") {
  file_list = all_native_files

  deps = []

  if (axis_enable_go_binding) {
    deps += [ "go" ]
  }

  if (axis_enable_python_binding) {
    deps += [ "python" ]
  }

  if (axis_enable_nodejs_binding) {
    deps += [ "nodejs" ]
  }
}
