#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_runtime/feature/test.gni")

aptima_package_test_prepare_auxiliary_resources("package_version_not_found") {
  resources = [
    "//.gnfiles/build/scripts/cmd_exec.py=>common/cmd_exec.py",
    "//tests/aptima_runtime/integration/common=>common",
    "__init__.py",
    "test_app/manifest.json",
    "test_case.py",
  ]
  deps = [
    "//core/src/aptima_manager",
    "//tests/local_registry",
  ]
}
