#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_runtime/feature/test.gni")

aptima_package_test_prepare_auxiliary_resources("mock_extension") {
  resources = [
    "//.gnfiles/build/scripts/cmd_exec.py=>common/cmd_exec.py",
    "__init__.py",
    "mock_extension/expected.json",
    "mock_extension/manifest.json",
    "test_case.py",
  ]
  deps = [
    "//core/src/aptima_manager",
    "//tests/local_registry",
  ]
}
