#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/axis_runtime/feature/test.gni")

axis_package_test_prepare_auxiliary_resources(
    "install_all_fail_with_local_unsupported_pkg") {
  resources = [
    "//.gnfiles/build/scripts/cmd_exec.py=>common/cmd_exec.py",
    "__init__.py",
    "test_app/manifest.json",
    "test_app/axis_packages/extension/heiheihei_1/manifest.json",
    "test_app/axis_packages/extension/heiheihei_2/manifest.json",
    "test_case.py",
  ]
  deps = [
    "//core/src/axis_manager",
    "//tests/local_registry",
  ]
}
